--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "http-status-codes": "^2.3.0",
     "joi": "^17.13.3",
     "mongoose": "^8.9.3",
     "nodemon": "^3.1.9"
