--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/morgan": "^1.9.9",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "food-order-crud": "file:",
     "http-status-codes": "^2.3.0",
     "joi": "^17.13.3",
     "mongoose": "^8.9.3",
-    "nodemon": "^3.1.9"
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.9",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
